--- a/bootCrm12.21/.classpath
+++ b/bootCrm12.21/.classpath
@@ -2,11 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="config"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0">
-		<attributes>
-			<attribute name="owner.project.facets" value="jst.web"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
@@ -62,22 +57,9 @@
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/spring-web-4.1.3.RELEASE.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/spring-webmvc-4.1.3.RELEASE.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/standard-1.1.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="E:/e_exam/exam_system/bootCrm12.3/WebContent/WEB-INF/lib/shiro-core-1.2.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="E:/e_exam/exam_system/bootCrm12.3/WebContent/WEB-INF/lib/shiro-ehcache-1.2.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="E:/e_exam/exam_system/bootCrm12.3/WebContent/WEB-INF/lib/shiro-spring-1.2.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="E:/e_exam/exam_system/bootCrm12.3/WebContent/WEB-INF/lib/shiro-web-1.2.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/shiro-quartz-1.2.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/commons-beanutils-1.9.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/ehcache-core-2.5.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/陈伟/Desktop/jar包/commons-compress-1.18.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/陈伟/Desktop/jar包/commons-io-2.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/陈伟/Desktop/jar包/commons-lang3-3.8.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/陈伟/Desktop/jar包/commons-logging-1.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/陈伟/Desktop/jar包/docx4j-6.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/陈伟/Desktop/jar包/guava-27.0-jre.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/陈伟/Desktop/jar包/log4j-1.2.17.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/陈伟/Desktop/jar包/slf4j-api-1.7.25.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/陈伟/Desktop/jar包/slf4j-log4j12-1.7.25.jar"/>
 	<classpathentry exported="true" kind="lib" path="config/xalan-2.7.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="config/xmlgraphics-commons-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/commons-compress-1.18.jar"/>
@@ -93,5 +75,6 @@
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/shiro-web-1.2.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/xalan-2.7.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/xmlgraphics-commons-1.3.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
